--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="theme-color" content="#ffffff" />
+    <meta name="description" content="Aplikasi pencatat keuangan pribadi" />
+    <link rel="apple-touch-icon" href="/pwa-192x192.svg" />
+    <title>Aplikasi Keuangan</title>
   </head>
   <body>
     <div id="root"></div>
